# chimangoscan

./: .gitignore  .gitmodules  DATASET.md  LICENSE  Makefile  README.md  reproduce.sh  requirements.txt
analysis/data/: dedup_analysis.json  extra_analysis.json  paper_analysis.json  (+8 more)
dataset/: dataset.conf
docker/: Dockerfile.runner
docs/: REPRODUCIBILITY_REPORT.md
orchestration/: _runner.sh  analysis_mongo.sh  analysis_neo4j.sh  analysis_sqlite.sh  make_scanners_config.sh  minimal_test.sh  run_analysis.sh  run_pipeline.sh
scripts/: fetch_dataset.sh  publish_dataset.sh
stages/scanners/: .gitignore  LICENSE  README.md  pyproject.toml
stages/scanners/config/: config.example.yaml  scanners.yaml
stages/scanners/docs/: architecture.md  scanners.md
stages/scanners/scripts/: fix_weights_v2.py  osv-api-fill-v2.py  osv-api-fill.py  requeue_5of6.py
stages/scanners/src/scanners/: cli.py  config.py  models.py  util.py
stages/scanners/src/scanners/adapters/: __init__.py  base.py  osv.py  registry.py
stages/scanners/src/scanners/dockerctl/: __init__.py  auth.py  client.py  lifecycle.py
stages/scanners/src/scanners/findings/: __init__.py  analysis.py  merge.py  openvas_import.py  store.py
stages/scanners/src/scanners/jobqueue/: __init__.py  http_queue.py  server.py  sqlite_queue.py
stages/scanners/src/scanners/pipeline/: __init__.py  runner.py  worker.py
stages/scanners/src/scanners/report/: __init__.py  html.py
stages/scanners/src/scanners/sources/: __init__.py  base.py  jsonl_source.py  txt_source.py
stages/scanners/tests/: test_config_and_sources.py
(+185 files in other folders)
